--- a/Documents/ما الجديد.md
+++ b/Documents/ما الجديد.md
@@ -1,17 +1,39 @@
-الجديد في نسخة طيف 1.1.0:
 
-- إضافات:
-1- إضافة خيار الخروج من المحرر في قائمة ملف
-2- إضافة التحقق من حفظ الملف عند الخروج من البرنامج
-3- إضافة القدرة على سحب وإفلات النص المحدد ضمن المحرر
-4- إصافة صفحة الإعدادات في قائمة ملف 
-5- إضافة التحكم بحجم الخط ضمن نافذة الإعدادات
-6- إعتماد خط جديد للمحرر يدعى NotoKufiArabic
+# الجديد في نسخة طيف 3.2.0: | التاريخ: 1-8-1447
 
 
+- #### إضافات:
+	1. إضافة طرفية النظام
+	2. إضافة طرفية مخرجات برنامج ألف
+	3. إضافة نافذة البحث عن نص ضمن المحرر وذلك عن طريق الإختصار CTRL+F
+	4. إضافة نافذة القفز إلى سطر محدد وذلك عن طريق الإختصار CTRL+G
+	5. إضافة القدرة على فتح أكثر من ملف في نفس الوقت
+	6. إضافة القدرة على فتح مجلد محدد
+	7. إضافة القدرة على طي الكتلة ضمن الشيفرة مثل طي الدالة او الصنف
+	8. إضافة القدرة على نسخ سطر عن طريق الإختصار CTRL+D
+	9. إضافة القدرة على نقل سطر للأعلى والأسفل عن طريق الإختصار ALT+UpArrow و ALT+DownArrow
+	10. إضافة القدرة على تعليق السطر - تحويل السطر إلى تعليق - عن طريق الإختصار CTRL+ظ
+	11. إضافة زر مرئي لتشغيل البرنامج
 
-- تصحيح أخطاء:
-1- تصحيح مشكلة عدم اختفاء قائمة الإكمال التلقائي في حال تم الإنتقال الى برنامج أخر
-2- تصحيح لون العنصر المحدد في قائمة الإكمال التلقائي
-3- تصحيح تلوين النصوص المنسقة
-4- تحسين لون النص في ملون المحرر
+- #### تحسينات:
+	1. تم التحسين على نظام تلوين الشيفرة
+
+# الجديد في نسخة طيف 3.1.0: | التاريخ: 1-4-1447
+
+
+- #### إضافات:
+	1. إضافة خيار الخروج من المحرر في قائمة ملف
+	2. إضافة التحقق من حفظ الملف عند الخروج من البرنامج
+	3. إضافة القدرة على سحب وإفلات النص المحدد ضمن المحرر
+	4. إصافة صفحة الإعدادات في قائمة ملف 
+	5. إضافة التحكم بحجم الخط ضمن نافذة الإعدادات
+	6. إعتماد خط جديد للمحرر يدعى NotoKufiArabic
+
+
+- #### تصحيح أخطاء:
+	1. تصحيح مشكلة عدم اختفاء قائمة الإكمال التلقائي في حال تم الإنتقال الى برنامج أخر
+	2. تصحيح لون العنصر المحدد في قائمة الإكمال التلقائي
+	3. تصحيح تلوين النصوص المنسقة
+
+- #### تحسينات:
+	1. تحسين لون النص في ملون المحرر
