--- a/Documents/ما الجديد.md
+++ b/Documents/ما الجديد.md
@@ -12,7 +12,7 @@
 	7. إضافة القدرة على طي الكتلة ضمن الشيفرة مثل طي الدالة او الصنف
 	8. إضافة القدرة على نسخ سطر عن طريق الإختصار CTRL+D
 	9. إضافة القدرة على نقل سطر للأعلى والأسفل عن طريق الإختصار ALT+UpArrow و ALT+DownArrow
-	10. إضافة القدرة على تعليق السطر - تحويل السطر إلى تعليق - عن طريق الإختصار CTRL+ظ
+	10. إضافة القدرة على تعليق السطر - تحويل السطر إلى تعليق - عن طريق الإختصار CTRL+SHIFT+L على ويندوز او CTRL+/ على لينكس او ماك
 	11. إضافة زر مرئي لتشغيل البرنامج
 	12. إضافة شريط معلومات السطر والعمود
 	13. إضافة صفحة ترحيب عند بدأ المحرر لتسهيل فتح ملفات تم فتحها سابقا وغير ذلك
@@ -20,6 +20,7 @@
 
 - #### تحسينات:
 	1. تم التحسين على نظام تلوين الشيفرة
+	2. تم التحسين على حجم ومكان ظهور النافذة الرئيسية
 
 # الجديد في نسخة طيف 3.1.0: | التاريخ: 1-4-1447
 
