--- a/Documents/ما الجديد.md
+++ b/Documents/ما الجديد.md
@@ -17,6 +17,7 @@
 	12. إضافة شريط معلومات السطر والعمود
 	13. إضافة صفحة ترحيب عند بدأ المحرر لتسهيل فتح ملفات تم فتحها سابقا وغير ذلك
 	14. حفظ نسخة إحتياطية كل دقيقة بحيث في حال تم الخروج من البرنامج بشكل غير متوقع وتمت إعادة فتح الملف تظهر رسالة بأنه يوجد نسخة من الملف المعدل لإستعادتها
+	15. إظهار مسار الملف المفتوح عند وقوف المؤشر فوق اللسان الخاص به
 
 - #### تحسينات:
 	1. تم التحسين على نظام تلوين الشيفرة
